feat: improve trade network navigation
